# shx

./: README.md
shx-cdh/: Cargo.toml
shx-cdx/: Cargo.toml  README.md  install.sh
shx-cdx/src/: cd.rs  cli.rs  formatter.rs  history.rs  main.rs  opts.rs  path.rs  theme.rs
shx-cdx/src/theme/: color.rs  formatter.rs  mod.rs
shx-config/: Cargo.toml
shx-config/src/: cdx.rs  config.rs  lib.rs
