[package]
name = "shx-cdx"
version = "0.0.1"
edition = "2021"
homepage = "https://github.com/cjlee38/shx"
repository = "https://github.com/cjlee38/shx"
description = "Cd with history"
license = "Apache-2.0"
include = [
    "**/*.rs",
    "Cargo.*",
    "*.md",
]

[dependencies]
clap = { version = "4", features = ["cargo", "wrap_help", "derive"] }
bincode = "1.3.3"
anyhow = "1.0.93"
shx-config = { path = "../shx-config" }
serde = { version = "1.0.214", features = ["derive"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
inquire = "0.7.5"
colored = "2"

[[bin]]
name = "shx-cdx"
path = "src/main.rs"
readme = "../README.md"